# Deforestation-IBM-simulation

./: .gitignore  README.md
c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run.sh
c++/src/: Animal.cpp  Predator.cpp  Prey.cpp  Renderer.cpp  Tree.cpp  animal.cpp  animal.hpp  brain.cpp  brain.hpp  const.hpp  gene.hpp  grid.cpp  grid.hpp  maddpg.cpp  maddpg.hpp  maddpgAgent.cpp  maddpgAgent.hpp  main.cpp  neuron.cpp  neuron.hpp  predator.cpp  predator.hpp  prey.cpp  prey.hpp  random.cpp  random.hpp  renderer.cpp  renderer.hpp  replayBuffer.cpp  replayBuffer.hpp  simulation.cpp  simulation.hpp  tree.cpp  tree.hpp  vision.hpp
data/: fourth_balance.csv  plot_info.csv  second_balance.csv  settings_2_43.csv  settings_4_39.csv  settings_6_34.csv  settings_6_36.csv  settings_6_44.csv  third_balance.csv
python/res/html-docs/contents/: element_index.html
python/src/: bayesian_optimisation.py  main.py  plot.py  prey.py  run.sh  run_once.sh  simulation.py
python/src/archives/: animal.py  cell.py
res/: class_diagram.mdj  plot_info.csv
res/html-docs/contents/: navigation.html
src/: animal.py  const.py  grid.py  main.py  population.py  predator.py  tree.py
training/: CMakeLists.txt
training/src/: actor.hpp  animal.cpp  animal.hpp  const.hpp  critic.hpp  gene.hpp  innovationHistory.cpp  innovationHistory.hpp  main.cpp  neuron.cpp  neuron.hpp  random.cpp  random.hpp  renderer.cpp  renderer.hpp  replayBuffer.cpp  replayBuffer.hpp  simulation.cpp  simulation.hpp  transition.hpp  tree.cpp  vision.hpp
